@@ -1,3 +1,7 @@
+2013-08-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ configure.ac.in:
+ - Prefer <memory> over <tr1/memory>
+ - Fixes #266.  Thanks Wichert Akkerman.
 2013-01-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
  tools/splitconfig:
  - Rewrote in python.
